# smstools

./: .gitignore  CMakeLists.txt  README  README.md  sms2utf8.sh  ussd.sh  viewsms.sh
cmake_toolchains/: ubuntu-arm64.cmake  ubuntu-armhf.cmake
example/: ussd.pl
ussd7bit/: Makefile  decode.c  encode.c  ussdEncode.c
